Rewrite to use java version 11.